Add 'Back to benchmark' button

--- a/scores.html
+++ b/scores.html
@@ -151,6 +151,24 @@
                 padding: 12px;
             }
         }
+
+        .back-button {
+            display: inline-block;
+            padding: 10px 20px;
+            margin-top: 20px;
+            margin-bottom: 10px;
+            background-color: #bb86fc;
+            color: #0d1117;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+            text-align: center;
+        }
+
+        .back-button:hover {
+            background-color: #a06cd5;
+        }
     </style>
 </head>
 <body>
@@ -309,6 +327,7 @@
                 </tr>
             </tbody>
         </table>
+        <a href="/" class="back-button">Back to Benchmark</a>
         <div id="version">Benchmark Version: 1.0.4</div>
     </div>
 </body>
