--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<script
+    src="https://rybbit.dill.moe/api/script.js"
+    data-site-id="3"
+    defer
+></script>
     <script>
     let wakeLock = null;
     async function requestWakeLock() {
